objects/ssot__ViolationType__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Violation Type Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationTypeCategory__c</fullName>
        <label>Violation Type Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationTypeSeverity__c</fullName>
        <label>Violation Type Severity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>